--- a/Makefile.site
+++ b/Makefile.site
@@ -74,16 +74,16 @@ update-amd update-arm:
 	if [[ "$(shell pwd)" == "$(HOME)" ]]; then cd work/dev && git pull && $(MAKE) $@-inner; else $(MAKE) $@-inner; fi
 
 update-amd-inner:
-	env PATH="$$HOME/bin/fake:$$PATH" earthly --remote-cache=$(cache)defn/cache:updates $(push) +amd64-update --repo=$(repo) --repo_from=$(repo_from)
+	env PATH="$$HOME/bin/fake:$$PATH" earthly --remote-cache=$(cache)defn/cache:updates $(push) +amd64-update --repo=$(repo)
 
 update-arm-inner:
-	env PATH="$$HOME/bin/fake:$$PATH" earthly --remote-cache=$(cache)defn/cache:updates $(push) +arm64-update --repo=$(repo) --repo_from=$(repo_from)
+	env PATH="$$HOME/bin/fake:$$PATH" earthly --remote-cache=$(cache)defn/cache:updates $(push) +arm64-update --repo=$(repo)
 
 push-amd:
-	$(MAKE) update-amd repo= repo_from=localhost:5000/
+	$(MAKE) update-amd repo=
 
 push-arm:
-	$(MAKE) update-arm repo= repo_from=localhost:5000/
+	$(MAKE) update-arm repo=
 
 shell:
 	docker run --rm -ti $(repo)defn/dev bash -l
