--- a/Makefile.site
+++ b/Makefile.site
@@ -1,7 +1,8 @@
 include Makefile.common
 
 init-site:
-	@true
+	@aws --profile meh sts get-caller-identity
+	@pass hello
 
 import:
 	$(MAKE) registry
