--- a/Makefile.common
+++ b/Makefile.common
@@ -70,6 +70,9 @@ sync:
 	argocd --kube-context argocd app sync argocd --local k/argocd --assumeYes --prune
 	argocd --kube-context argocd app wait argocd
 
+	argocd --kube-context cert-manager app sync cert-manager --local k/cert-manager --assumeYes --prune
+	argocd --kube-context cert-manager app wait cert-manager
+
 	argocd --kube-context kyverno app sync kyverno --local k/kyverno --assumeYes --prune
 	argocd --kube-context kyverno app wait kyverno
 
