--- a/k/cert-manager/kustomization.yaml
+++ b/k/cert-manager/kustomization.yaml
@@ -7,7 +7,7 @@ helmCharts:
   repo: https://charts.jetstack.io
   includeCRDs: true
   valuesInline:
-    namespace: certmanager
+    namespace: cert-manager
 
 resources:
 - cert-manager.crds.yaml
