--- a/Makefile.common
+++ b/Makefile.common
@@ -157,10 +157,9 @@ cluster-inner:
 	$(MAKE) registry
 	-k3d cluster delete $(k3d_name)
 	if [[ -x "$$(type -P tailscale)" ]]; then if tailscale ip 2>&1 | grep NeedsLogin; then sudo tailscale up; fi; fi
-	env DEFN_DEV_HOST="$(k3d_name).tiger-mamba.ts.net" DEFN_DEV_IP="$$(tailscale ip -4)" \
+	env \
 		k3d cluster create $(k3d_name) \
 		--config k3d.yaml \
-		--registry-use registry \
 		-p    "80:8000@server:0" \
 		-p   "443:9701@server:0" \
 		-p  "5681:5681@server:0" \
@@ -192,8 +191,6 @@ cluster-inner:
 		--k3s-arg "--disable=traefik@all"
 	docker update --restart=no k3d-$(k3d_name)-server-0
 	docker exec k3d-$(k3d_name)-server-0 touch /etc/passwd
-	kubectl apply -f k/dev/main.yaml
-	while true; do if kubectl rollout status statefulset dev --watch; then break; fi; sleep 5; done
 
 vault-unseal:
 	pass Unseal_Key_1 | curl -sSL -X PUT -d @<(jq -nrR 'inputs|{key:.}|@json') http://localhost:8200/v1/sys/unseal
