set port to 6443

--- a/k3d.yaml
+++ b/k3d.yaml
@@ -5,6 +5,7 @@ agents: 0
 kubeAPI:
   host: "${DEFN_DEV_HOST}"
   hostIP: 0.0.0.0
+  hostPort: "6443"
 image: defn.dev/defn/k3d
 volumes:
   - volume: work:/mnt/work
