--- a/Makefile.common
+++ b/Makefile.common
@@ -1,4 +1,4 @@
-repo ?= localhost:5000/
+repo ?=
 cache ?=
 push ?= --push
 dummy_ip ?= 169.254.32.1
@@ -18,20 +18,6 @@ dummy:
 dummy-docker:
 	docker run --rm -i --privileged --network=host --pid=host alpine nsenter -t 1 -m -u -n -i -- \
 		bash -c "ip link add dummy0 type dummy; ip addr add $(dummy_ip)/32 dev dummy0; ip link set dev dummy0 up"
-
-cache:
-	-docker rm -f earthly-buildkitd
-	-docker rm -f k3d-registry k3d-docker-io
-	-docker volume rm earthly-cache
-	-docker system prune -f
-	$(MAKE) registry
-
-registry:
-	-if ! curl -s localhost:5000/v2; then k3d registry create registry --port 0.0.0.0:5000; fi
-	-if ! curl -s localhost:5001/v2; then k3d registry create docker-io --proxy-remote-url https://registry-1.docker.io --port 0.0.0.0:5001; fi
-	-if ! curl -s localhost:5002/v2; then k3d registry create gcr-io --proxy-remote-url https://gcr.io --port 0.0.0.0:5002; fi
-	-if ! curl -s localhost:5003/v2; then k3d registry create ghcr-io --proxy-remote-url https://ghcr.io --port 0.0.0.0:5003; fi
-	-if ! curl -s localhost:5004/v2; then k3d registry create quay-io --proxy-remote-url https://quay.io --port 0.0.0.0:5004; fi
 
 unlock:
 	cd ~/.password-store && git crypt unlock
@@ -155,7 +141,6 @@ cluster:
 	$(MAKE) cluster-inner name=$(name) ip=$(ip)
 
 cluster-inner:
-	$(MAKE) registry
 	cd d/k3d && $(MAKE) build name=$(name)
 	-k3d cluster delete $(k3d_name)
 	if [[ -x "$$(type -P tailscale)" ]]; then if tailscale ip 2>&1 | grep NeedsLogin; then sudo tailscale up; fi; fi
