--- a/Makefile.common
+++ b/Makefile.common
@@ -33,10 +33,10 @@ init:
 	$(MAKE) init-site
 
 init-inner:
-	git clone git@github.com:jojomomojo/password-store work/password-store
-	cd work/password-store && git crypt unlock
+	-git clone git@github.com:defn/dev work/dev
+	-git clone git@github.com:jojomomojo/password-store work/password-store
+	-cd work/password-store && git crypt unlock
 	$(MAKE) vault-unseal
-	git clone git@github.com:defn/dev work/dev
 	$(MAKE) kubeconfig
 
 tilt:
