--- a/Makefile.common
+++ b/Makefile.common
@@ -6,8 +6,7 @@ workdir ?= /home/ubuntu
 tilt_port ?= 10350
 k3d_name ?= $(shell uname -n | cut -d. -f1)
 context ?= "k3d-$(k3d_name)"
-podname ?= "dev-0"
-name ?= "k3d-$(k3d_name)"
+podname ?= "$(k3d_name)-0"
 
 trust-ca:
 	sudo security add-trusted-cert -d -r trustRoot -k ~/Library/Keychains/login.keychain-db etc/ca.crt
@@ -138,45 +137,13 @@ attach-remo:
 
 cluster:
 	git pull
-	$(MAKE) cluster-inner name=$(name) ip=$(ip)
+	$(MAKE) cluster-inner name=$(context) ip=$(ip)
 
 cluster-inner:
-	cd d/k3d && $(MAKE) build name=$(name)
+	cd d/k3d && $(MAKE) build name=$(context)
 	-k3d cluster delete $(k3d_name)
 	if [[ -x "$$(type -P tailscale)" ]]; then if tailscale ip 2>&1 | grep NeedsLogin; then sudo tailscale up; fi; fi
-	env \
-		env \
-		k3d cluster create $(k3d_name) \
-		--config k3d.yaml \
-		-p    "80:8000@server:0" \
-		-p   "443:9701@server:0" \
-		-p  "5681:5681@server:0" \
-		-p  "5685:5685@server:0" \
-		-p  "9440:9440@server:0" \
-		-p  "9441:9441@server:0" \
-		-p  "9442:9442@server:0" \
-		-p  "9443:9443@server:0" \
-		-p  "8200:8200@server:0" \
-		-p  "9600:9600@server:0" \
-		-p  "9601:9601@server:0" \
-		-p  "9602:9602@server:0" \
-		-p  "9603:9603@server:0" \
-		-p  "9604:9604@server:0" \
-		-p  "9605:9605@server:0" \
-		-p  "9606:9606@server:0" \
-		-p  "9607:9607@server:0" \
-		-p  "9608:9608@server:0" \
-		-p  "9609:9609@server:0" \
-		-p "10001:10001@server:0" \
-		-p "10002:10002@server:0" \
-		-p "10003:10003@server:0" \
-		-p "10004:10004@server:0" \
-		-p "10005:10005@server:0" \
-		-p "10006:10006@server:0" \
-		-p "10007:10007@server:0" \
-		-p "10008:10008@server:0" \
-		-p "10009:10009@server:0" \
-		--k3s-arg "--disable=traefik@all"
+	k3d cluster create $(k3d_name) --config k3d.yaml --k3s-node-label env=$(k3d_name)@server:0
 	docker update --restart=no k3d-$(k3d_name)-server-0
 	docker exec k3d-$(k3d_name)-server-0 touch /etc/passwd
 
