--- a/Makefile.common
+++ b/Makefile.common
@@ -34,7 +34,7 @@ init:
 init-inner:
 	-git clone git@github.com:defn/dev work/dev
 	-git clone git@github.com:jojomomojo/password-store work/password-store
-	-cd work/password-store && git crypt unlock
+	-cd work/password-store && git crypt unlock && git pull
 	$(MAKE) vault-unseal
 	$(MAKE) kubeconfig
 
