--- a/Makefile.site
+++ b/Makefile.site
@@ -101,6 +101,6 @@ provision-digital-ocean:
 	@git remote add origin git@github.com:defn/dev
 	@git fetch origin
 	@git branch --set-upstream-to origin/main
-	@sudo apt purge -y nano
+	$(MAKE) init
+	@-sudo apt purge -y nano
 	$(MAKE) cluster
-	docker cp ~/.password-store/ k3d-$(k3d_name)-server-0:/mnt/work/password-store
