--- a/Makefile.site
+++ b/Makefile.site
@@ -104,3 +104,4 @@ provision-digital-ocean:
 	@-sudo apt purge -y nano
 	sudo curl -sSL -o /usr/local/bin/k3d https://github.com/k3d-io/k3d/releases/download/v5.4.4/k3d-linux-amd64
 	sudo chmod 755 /usr/local/bin/k3d
+	make cluster
