--- a/k/sets/dev.yaml
+++ b/k/sets/dev.yaml
@@ -24,6 +24,9 @@ spec:
           - name: argo-workflows
             namespace: argo-workflows
             cluster: in-cluster
+          - name: traefik
+            namespace: traefik
+            cluster: in-cluster
   template:
     metadata:
       name: "{{name}}"
