--- a/Makefile.common
+++ b/Makefile.common
@@ -75,6 +75,10 @@ sync:
 	argocd --kube-context argocd app sync argo-events --local k/argo-events --assumeYes --prune
 	argocd --kube-context argocd app wait argo-events
 
+	argocd --kube-context argocd app sync traefik --local k/traefik --assumeYes --prune
+	argocd --kube-context argocd app wait traefik
+	$(MAKE) cert
+	
 	kubectl --context argocd apply -f k/sets.yaml
 	sleep 5
 	argocd --kube-context argocd app sync sets --local k/sets --assumeYes --prune
