--- a/e/dev/no-ns.yaml
+++ b/e/dev/no-ns.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: dev-no-ns
+  name: sets-dev-no-ns
   namespace: argocd
   labels:
     argocd.argoproj.io/instance: sets
