--- a/e/dev/ns.yaml
+++ b/e/dev/ns.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: dev
+  name: sets-dev-ns
   namespace: argocd
   labels:
     argocd.argoproj.io/instance: sets
