traefik uses a loadbalancer

--- a/k/traefik/kustomization.yaml
+++ b/k/traefik/kustomization.yaml
@@ -7,6 +7,8 @@ helmCharts:
   repo: https://helm.traefik.io/traefik
   includeCRDs: true
   valuesInline:
+    service:
+      type: LoadBalancer
 
 resources:
 - tls.yaml
