turn on automated deploys

--- a/e/remo/no-ns.yaml
+++ b/e/remo/no-ns.yaml
@@ -27,6 +27,8 @@ spec:
       syncPolicy:
         syncOptions:
           - CreateNamespace=true
+        automated:
+          prune: true
       ignoreDifferences:
         - kind: MutatingWebhookConfiguration
           group: admissionregistration.k8s.io
