--- a/Makefile.site
+++ b/Makefile.site
@@ -97,11 +97,12 @@ cert:
 	rm -f meh.json
 
 provision-digital-ocean:
-	@git remote rm origin
-	@git remote add origin git@github.com:defn/dev
-	@git fetch origin
-	@git branch --set-upstream-to origin/main
-	@-sudo apt purge -y nano
+	git clone git@github.com:jojomomojo/password-store work/password-store
+	git remote rm origin
+	git remote add origin git@github.com:defn/dev
+	git fetch origin
+	git branch --set-upstream-to origin/main
+	-sudo apt purge -y nano
 	sudo curl -sSL -o /usr/local/bin/k3d https://github.com/k3d-io/k3d/releases/download/v5.4.4/k3d-linux-amd64
 	sudo chmod 755 /usr/local/bin/k3d
 	make cluster
