--- a/Makefile.site
+++ b/Makefile.site
@@ -89,6 +89,7 @@ cert-ts:
 		--from-file=tls.crt=/var/lib/tailscale/certs/k3d-immanent.tiger-mamba.ts.net.crt
 
 cert:
+	-k --context pod create ns traefik
 	touch meh.json; chmod 0600 meh.json
 	-k --context pod create -n traefik secret generic default-certificate --from-file=meh.json
 	v write pki/issue/gyre.defn.dev common_name="$(DEFN_DEV_HOST)" ip_sans="169.254.32.1" alt_names="hello.demo.svc.cluster.local" tl=120h -format=json | jq .data > meh.json
