try to deploy cert-manager with a namespace

--- a/e/remo-defn/ns.yaml
+++ b/e/remo-defn/ns.yaml
@@ -13,7 +13,11 @@ spec:
             namespace: argocd
             cluster: in-cluster
             path: argocd
-          - name: kyverno
+          - name: cert-manager
+            namespace: cert-manager
+            cluster: in-cluster
+            path: cert-manager
+           - name: kyverno
             namespace: kyverno
             cluster: in-cluster
             path: kyverno
