sleep to give tailscale enough time

--- a/d/k3d/Makefile
+++ b/d/k3d/Makefile
@@ -11,5 +11,6 @@ mint:
 		"mkdir -p /var/lib/tailscale; \
 		/tailscaled -statedir /var/lib/tailscale & \
 		/tailscale up -hostname $(name) -authkey $$(pass tailscale_$(key));  \
+		sleep 10; \
 		while true; do if test -f /var/lib/tailscale/tailscaled.state; then (echo -n 'STATE '; cat /var/lib/tailscale/tailscaled.state | base64 -w 0); break; fi; sleep 1; done;" | grep ^STATE | awk '{print $$2}' | pass insert -e -f tailscale_$(name)
 
