--- a/Makefile.common
+++ b/Makefile.common
@@ -86,7 +86,6 @@ attach-remo:
 
 # env DEFN_DEV_HOST=k3d-immanent.tiger-mamba.ts.net DEFN_DEV_IP=100.97.109.86 make cluster
 cluster:
-	git pull
 	$(MAKE) cluster-inner name=$(context) ip=$(ip)
 
 cluster-inner:
@@ -94,6 +93,7 @@ cluster-inner:
 	-k3d cluster delete $(k3d_name)
 	if [[ -x "$$(type -P tailscale)" ]]; then if tailscale ip 2>&1 | grep NeedsLogin; then sudo tailscale up; fi; fi
 	k3d cluster create $(k3d_name) --config k3d.yaml --k3s-node-label env=$(k3d_name)@server:0
+	#k3d node create $(k3d_name) --role agent --image defn.dev/defn/k3d --token TOKEN --cluster https://k3d-remo-defn.tiger-mamba.ts.net:6443
 	docker update --restart=no k3d-$(k3d_name)-server-0
 	docker exec k3d-$(k3d_name)-server-0 touch /etc/passwd
 
