allow setting name

--- a/Makefile.common
+++ b/Makefile.common
@@ -3,7 +3,8 @@ cache ?=
 push ?= --push
 workdir ?= /home/ubuntu
 tilt_port ?= 10350
-k3d_name ?= $(shell uname -n | cut -d. -f1)
+name ?= $(shell uname -n | cut -d. -f1)
+k3d_name ?= $(name)
 context ?= k3d-$(k3d_name)
 podname ?= $(k3d_name)-0
 control ?= $(shell uname -n | sed s/-0//)
