--- a/Makefile.common
+++ b/Makefile.common
@@ -5,10 +5,11 @@ workdir ?= /home/ubuntu
 tilt_port ?= 10350
 name ?= $(shell uname -n | cut -d. -f1)
 k3d_name ?= $(name)
-context ?= k3d-$(k3d_name)
-podname ?= $(k3d_name)-0
-control ?= $(shell uname -n | sed s/-0//)
+context ?= k3d-$(name)
+podname ?= $(name)-0
+control ?= $(shell echo $(name) | sed s/-0//)
 domain ?= tiger-mamba.ts.net
+image ?= defn.dev/defn/k3d
 
 trust-ca:
 	sudo security add-trusted-cert -d -r trustRoot -k ~/Library/Keychains/login.keychain-db etc/ca.crt
@@ -87,18 +88,20 @@ attach:
 attach-remo:
 	code --folder-uri vscode-remote://k8s-container+context=remo+namespace=default+podname=dev-0+name=dev+$(workdir)
 
-cluster:
-	cd d/k3d && $(MAKE) get-state name=$(context)
-	env DEFN_DEV_HOST=${context}.${domain} DEFN_DEV_IP="$$(host ${context}.${domain} | grep 'has address' | awk '{print $$NF}')" $(MAKE) cluster-inner
+join cluster:
+	cd d/k3d && $(MAKE) get-state name=$(context) && $(MAKE) build name=$(context)
+	@env DEFN_DEV_HOST=${context}.${domain} DEFN_DEV_IP="$$(host ${context}.${domain} | grep 'has address' | awk '{print $$NF}')" $(MAKE) $@-inner join="$$(kubectl config view -o jsonpath='{.clusters[?(@.name == "$(to)")].cluster.server}')" token="$(shell docker exec $(to)-server-0 cat /var/lib/rancher/k3s/server/node-token)" name=$(name)
+
+join-inner:
+	-k3d cluster delete "$(join)"
+	-k3d node create $(name) --role agent --image $(image) --token "$(token)" --cluster "$(join)"
 
 cluster-inner:
-	cd d/k3d && $(MAKE) build name=$(context)
-	-k3d cluster delete $(k3d_name)
+	-k3d cluster delete $(name)
 	if [[ -x "$$(type -P tailscale)" ]]; then if tailscale ip 2>&1 | grep NeedsLogin; then sudo tailscale up; fi; fi
-	k3d cluster create $(k3d_name) --config k3d.yaml --k3s-node-label env=$(k3d_name)@server:0
-	#k3d node create $(k3d_name) --role agent --image defn.dev/defn/k3d --token TOKEN --cluster https://${context}.${domain}:6443
-	docker update --restart=no k3d-$(k3d_name)-server-0
-	docker exec k3d-$(k3d_name)-server-0 touch /etc/passwd
+	k3d cluster create $(name) --config k3d.yaml --k3s-node-label env=$(name)@server:0
+	docker update --restart=no $(context)-server-0
+	docker exec $(context)-server-0 touch /etc/passwd
 
 vault-unseal:
 	pass Unseal_Key_1 | curl -sSL -X PUT -d @<(jq -nrR 'inputs|{key:.}|@json') http://localhost:8200/v1/sys/unseal
