--- a/k/argocd/charts/argo-cd/Chart.yaml
+++ b/k/argocd/charts/argo-cd/Chart.yaml
@@ -1,13 +1,13 @@
 annotations:
   artifacthub.io/changes: |
-    - "[Fixed]: fix doc of how to upgrade CRD"
+    - "[Changed]: update redis to 7.0.4 for avoiding CVE-2022-30065"
 apiVersion: v2
-appVersion: v2.4.2
+appVersion: v2.4.7
 dependencies:
 - condition: redis-ha.enabled
   name: redis-ha
   repository: https://dandydeveloper.github.io/charts/
-  version: 4.16.0
+  version: 4.17.1
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool
   for Kubernetes.
 home: https://github.com/argoproj/argo-helm
@@ -22,4 +22,4 @@ maintainers:
 - name: jessesuen
 - name: seanson
 name: argo-cd
-version: 4.9.8
+version: 4.10.3
