--- a/k/argocd/charts/argo-cd/templates/argocd-notifications/service-metrics.yaml
+++ b/k/argocd/charts/argo-cd/templates/argocd-notifications/service-metrics.yaml
@@ -5,18 +5,21 @@ metadata:
   name: {{ template "argo-cd.notifications.fullname" . }}-metrics
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.notifications.name "name" "metrics") | nindent 4 }}
-    {{- with .Values.notifications.metrics.service.labels }}
-      {{- toYaml . | nindent 4 }}
-    {{- end }}
-  {{- with .Values.notifications.metrics.service.annotations  }}
+{{- if .Values.notifications.metrics.service.labels }}
+{{- toYaml .Values.notifications.metrics.service.labels | nindent 4 }}
+{{- end }}
+{{- if .Values.notifications.metrics.service.annotations }}
   annotations:
-    {{- toYaml . | nindent 4 }}
+  {{- range $key, $value := .Values.notifications.metrics.service.annotations }}
+    {{ $key }}: {{ $value | quote }}
   {{- end }}
+{{- end }}
 spec:
   selector:
     {{- include "argo-cd.selectorLabels" (dict "context" . "name" .Values.notifications.name) | nindent 6 }}
   ports:
   - name: {{ .Values.notifications.metrics.service.portName }}
+    protocol: TCP
     port: {{ .Values.notifications.metrics.port }}
-    targetPort: {{ .Values.notifications.metrics.port }}
+    targetPort: metrics
 {{- end }}
