--- a/k/argocd/charts/argo-cd/templates/argocd-server/hpa.yaml
+++ b/k/argocd/charts/argo-cd/templates/argocd-server/hpa.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.server.autoscaling.enabled }}
-apiVersion: autoscaling/v2beta1
+apiVersion: {{ include "argo-cd.autoscaling.apiVersion" . }}
 kind: HorizontalPodAutoscaler
 metadata:
   labels:
@@ -17,12 +17,24 @@ spec:
     - type: Resource
       resource:
         name: memory
+        {{- if eq (include "argo-cd.autoscaling.apiVersion" $) "autoscaling/v2beta1" }}
         targetAverageUtilization: {{ . }}
+        {{- else }}
+        target:
+          averageUtilization: {{ . }}
+          type: Utilization
+        {{- end }}
 {{- end }}
 {{- with .Values.server.autoscaling.targetCPUUtilizationPercentage }}
     - type: Resource
       resource:
         name: cpu
+        {{- if eq (include "argo-cd.autoscaling.apiVersion" $) "autoscaling/v2beta1" }}
         targetAverageUtilization: {{ . }}
+        {{- else }}
+        target:
+          averageUtilization: {{ . }}
+          type: Utilization
+        {{- end }}
 {{- end }}
 {{- end }}
